WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190813
Really prevent PLATFORM(IOS) from being used
https://bugs.webkit.org/show_bug.cgi?id=190813
Summary
Really prevent PLATFORM(IOS) from being used
Alexey Proskuryakov
Reported
2018-10-22 16:33:35 PDT
Not defining WTF_PLATFORM_IOS is not enough. To really catch in-flight patches misusing it, I have to define it to something. With this patch, the error looks like this: In file included from /Users/ap/Safari/OpenSource/Source/WTF/wtf/AutomaticThread.cpp:26: In file included from /Users/ap/Safari/OpenSource/Source/WTF/config.h:26: In file included from /Users/ap/Safari/OpenSource/WebKitBuild/Debug-iphonesimulator/usr/local/include/wtf/ExportMacros.h:32: /Users/ap/Safari/OpenSource/WebKitBuild/Debug-iphonesimulator/usr/local/include/wtf/Platform.h:548:5: error: 'UNDEFINED' is not defined, evaluates to 0 [-Werror,-Wundef] #if PLATFORM(IOS) && __IPHONE_OS_VERSION_MIN_REQUIRED >= 120000 ^ /Users/ap/Safari/OpenSource/WebKitBuild/Debug-iphonesimulator/usr/local/include/wtf/Platform.h:36:71: note: expanded from macro 'PLATFORM' #define PLATFORM(WTF_FEATURE) (defined WTF_PLATFORM_##WTF_FEATURE && WTF_PLATFORM_##WTF_FEATURE) ^ <scratch space>:13:1: note: expanded from here WTF_PLATFORM_IOS ^ In file included from /Users/ap/Safari/OpenSource/Source/WTF/wtf/AutomaticThread.cpp:26: In file included from /Users/ap/Safari/OpenSource/Source/WTF/config.h:26: In file included from /Users/ap/Safari/OpenSource/WebKitBuild/Debug-iphonesimulator/usr/local/include/wtf/ExportMacros.h:32: /Users/ap/Safari/OpenSource/WebKitBuild/Debug-iphonesimulator/usr/local/include/wtf/Platform.h:532:26: note: expanded from macro 'WTF_PLATFORM_IOS' #define WTF_PLATFORM_IOS UNDEFINED /* Please use PLATFORM(IOS_FAMILY) until a more specific macro can be added. */ ^
Attachments
proposed patch
(2.33 KB, patch)
2018-10-22 16:35 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
proposed patch
(5.21 KB, patch)
2018-10-22 20:03 PDT
,
Alexey Proskuryakov
thorton
: review+
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews122 for ios-simulator-wk2
(2.59 MB, application/zip)
2018-10-23 00:14 PDT
,
EWS Watchlist
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2018-10-22 16:35:15 PDT
Created
attachment 352922
[details]
proposed patch
Alexey Proskuryakov
Comment 2
2018-10-22 20:03:32 PDT
Created
attachment 352951
[details]
proposed patch Better to include all changes.
EWS Watchlist
Comment 3
2018-10-23 00:14:02 PDT
Comment on
attachment 352951
[details]
proposed patch
Attachment 352951
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
https://webkit-queues.webkit.org/results/9702564
New failing tests: fast/box-shadow/box-shadow-with-zero-radius.html
EWS Watchlist
Comment 4
2018-10-23 00:14:04 PDT
Created
attachment 352959
[details]
Archive of layout-test-results from ews122 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews122 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
Alexey Proskuryakov
Comment 5
2018-10-23 09:14:12 PDT
The EWS failure is real. This patch fixes preprocessor guards added in
bug 190155
, and that used to cause the same failure in earlier iterations. Anyway, this patch is ready for review. I'll talk to Said about what's right to do here, but any changes will be of build fix/rollback kind, not related to the substance of this change.
Ryan Haddad
Comment 6
2018-10-23 11:18:27 PDT
(In reply to Alexey Proskuryakov from
comment #5
)
> The EWS failure is real. This patch fixes preprocessor guards added in bug > 190155, and that used to cause the same failure in earlier iterations.
I rolled out the change for 190155 in
https://trac.webkit.org/changeset/237359
Alexey Proskuryakov
Comment 7
2018-10-23 11:30:55 PDT
Committed
http://trac.webkit.org/r237361
Radar WebKit Bug Importer
Comment 8
2018-10-23 11:31:42 PDT
<
rdar://problem/45494051
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug