Really prevent PLATFORM(IOS) from being used https://bugs.webkit.org/show_bug.cgi?id=190813

Reviewed by Tim Horton.

* wtf/Platform.h: This relies on -Wundef, which we have enabled.



Canonical link: https://commits.webkit.org/205715@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237361 268f45cc-cd09-0410-ab3c-d52691b4dbfc