Source/WTF/wtf/Platform.h
@@ -374,7 +374,9 @@
 #if OS(DARWIN)
 #if TARGET_OS_IPHONE
 /* FIXME (November 2018): Add WTF_OS_IOS once most patches that used it as an old
- * version of PLATFORM(IOS_FAMILY) are no longer relevant. */
+ * version of OS(IOS_FAMILY) are no longer relevant.  It is currently defined so that
+ * attempting to use it will break the build. */
+#define WTF_OS_IOS UNDEFINED /* Please use OS(IOS_FAMILY) until a more specific macro can be added. */
 #define WTF_OS_IOS_FAMILY 1
 #elif TARGET_OS_MAC
 #define WTF_OS_MAC_OS_X 1
@@ -525,11 +527,15 @@
 #define WTF_PLATFORM_MAC 1
 #elif OS(IOS_FAMILY)
 /* FIXME (November 2018): Add WTF_PLATFORM_IOS once most patches that used it as an old
- * version of PLATFORM(IOS_FAMILY) are no longer relevant. */
+ * version of PLATFORM(IOS_FAMILY) are no longer relevant. It is currently defined so that
+ * attempting to use it will break the build. */
+#define WTF_PLATFORM_IOS UNDEFINED /* Please use PLATFORM(IOS_FAMILY) until a more specific macro can be added. */
 #define WTF_PLATFORM_IOS_FAMILY 1
 #if TARGET_OS_SIMULATOR
 /* FIXME (November 2018): Add WTF_PLATFORM_IOS_SIMULATOR once most patches that used it as an old
- * version of PLATFORM(IOS_FAMILY) are no longer relevant. */
+ * version of PLATFORM(IOS_FAMILY_SIMULATOR) are no longer relevant. It is currently defined so that
+ * attempting to use it will break the build. */
+#define WTF_PLATFORM_IOS_SIMULATOR UNDEFINED /* Please use PLATFORM(IOS_FAMILY_SIMULATOR) until a more specific macro can be added. */
 #define WTF_PLATFORM_IOS_FAMILY_SIMULATOR 1
 #endif
 #if defined(TARGET_OS_IOSMAC) && TARGET_OS_IOSMAC
